.provarCaches/00D6C0000000xA6UAI/objects/PHSS_Certification_Provisioning__c.object
<CustomObject>
    <fields>
        <fullName>Acquired_On__c</fullName>
        <label>Acquired On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <label>Certification Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Version__c</fullName>
        <label>Certification Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_On__c</fullName>
        <label>Expired On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SABA_Certificate_Number__c</fullName>
        <externalId>true</externalId>
        <label>SABA Certificate Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Internal_ID__c</fullName>
        <externalId>true</externalId>
        <label>SABA Internal ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PHSS Certification Provisioning</label>
    <nameField>
        <displayFormat>PHSS-CP-{0000}</displayFormat>
        <label>PHSS Certification Provisioning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHSS Certification Provisioning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>